--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,10 @@ import Hero from "@/components/Hero.astro";
 import SectionPage from "@/components/SectionPage.astro";
 import Offering from "@/components/Offering.astro";
 import Button from "@/components/shared/Button.astro";
+
+
+import offeringsData from "@/data/offerings";
+
 ---
 
 <Layout
@@ -19,6 +23,12 @@ import Button from "@/components/shared/Button.astro";
 		title="Instrumentos destacados"
 		description="Estos son los instrumentos destacados de este mes">
 		<div class="Catalogo-items">
+			
+			
+			
+			
+
+
 			<Offering
 				imagePath="/src/assets/images/ebano1.jpg"
 				altText="Quena de lujo en madera de ébano africano"
