changes from notebook

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,14 +4,10 @@ import Hero from "@/components/Hero.astro";
 import SectionPage from "@/components/SectionPage.astro";
 import Offering from "@/components/Offering.astro";
 import Button from "@/components/shared/Button.astro";
-<<<<<<< HEAD
 
 
-import offeringsData from "@/data/offerings";
+import offeringsData from "@/data/instrumentsData";
 
-=======
-import OfferingTest from "@/components/OfferingTest.astro";
->>>>>>> 0e60a2b53df33173a273a5c62f733943e6e9b915
 ---
 
 <Layout
