--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -71,6 +71,9 @@ main {
     padding: 0 1em;
     position: relative;
     gap: inherit;
+    grid-auto-rows: inherit;
+    grid-template-columns: inherit;
+    grid-auto-flow: inherit;
 }
 
 .Page {
