--- a/src/pages/catalog.astro
+++ b/src/pages/catalog.astro
@@ -1,7 +1,7 @@
 ---
 import OfferingContainer from "@/components/shared/OfferingContainer.astro";
 import Layout from "@/layouts/Layout.astro";
-import OfferingTest from "@/components/OfferingTest.astro";
+import OfferingTest from "@/components/Offering.astro";
 import offerings from "../data/dataQuenas";
 ---
 
