--- a/src/components/shared/OfferingContainer.astro
+++ b/src/components/shared/OfferingContainer.astro
@@ -2,9 +2,8 @@
 interface Props {
 	title?: string;
 	description?: string;
-	id?: string;
 }
-const { title, description, id } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <div class="OfferingsSection">
