--- a/src/components/shared/Button.astro
+++ b/src/components/shared/Button.astro
@@ -27,7 +27,7 @@ const { link, buttonText, classes, target = "_self" } = Astro.props;
 		border-radius: 2em 2em 2em 2em;
 
 		&:hover {
-			border: solid 2px var(--uiYellow);
+			border: solid 2px var(--uiWhite);
 			scale: 1.05;
 		}
 
