--- a/src/pages/catalog/index.astro
+++ b/src/pages/catalog/index.astro
@@ -2,8 +2,7 @@
 import OfferingContainer from "@/components/shared/OfferingContainer.astro";
 import Layout from "@/layouts/Layout.astro";
 import Offering from "@/components/Offering.astro";
-import offerings from "../data/dataQuenas";
-import SectionPage from "@/components/SectionPage.astro";
+import offerings from "../../data/dataQuenas";
 import TitlePage from "@/components/TitlePage.astro";
 ---
 
