--- a/src/components/Offering.astro
+++ b/src/components/Offering.astro
@@ -5,7 +5,18 @@ import { Image } from "astro:assets";
 import Disclaimer from "./shared/Disclaimer.astro";
 import Button from "./shared/Button.astro";
 
+//My images
+
 const { image, alt, title, description, price, id, youtubeLink } = Astro.props;
+
+const images = import.meta.glob<{ default: ImageMetadata }>(
+	"/src/assets/quenas/*.{jpeg,jpg,png,gif}"
+);
+
+if (!images[image])
+	throw new Error(
+		`"${image}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`
+	);
 ---
 
 <div class="Offering" id={id}>
@@ -44,7 +55,6 @@ const { image, alt, title, description, price, id, youtubeLink } = Astro.props;
 				buttonText="Contáctame"
 				classes="Button Button-sm"
 			/>
-			<slot />
 		</div>
 	</div>
 </div>
