--- a/src/components/TitlePage.astro
+++ b/src/components/TitlePage.astro
@@ -1,15 +1,15 @@
 ---
 interface Props {
-	title?: string;
-	description?: string;
+	title: string;
+	description: string;
 }
 const { title, description } = Astro.props;
 ---
 
 <section class:list={["Page"]}>
 	<div class="Container">
-		<h1 class="Page-title">{title && title}</h1>
-		<p>{description && description}</p>
+		<h1 class="Page-title">{title}</h1>
+		<p>{description}</p>
 		<slot />
 	</div>
 </section>
