--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,18 +1,26 @@
 ---
 import SectionPage from "@/components/SectionPage.astro";
+import TitlePage from "@/components/TitlePage.astro";
+import WhatsAppLg from "@/components/social-icons/WhatsAppLg.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout
 	title="Contáctame"
 	description="Mis datos de contacto oficiales y siempre actualizados">
-	<SectionPage title="Contáctame">
+	<TitlePage
+		title="Contáctame"
+		description="Mis datos de contacto oficiales y siempre actualizados"
+	/>
+	<div class="Container">
 		<article class="Article">
-			<p>Mis datos de contacto oficiales y siempre actualizados</p>
 			<p>
 				Escríbeme directamente a mi número de WhatsApp, y encuéntrame y sígueme
-				en mis Redes Sociales. Solo da click en cualquier ícono de abajo
+				en mis Redes Sociales. Solo da click en cualquier ícono de abajo:
 			</p>
+
+			<p>Contáctame directo vía WhatsApp:</p>
+			<a href="https://wa.me/946342437"><WhatsAppLg /></a>
 		</article>
-	</SectionPage>
+	</div>
 </Layout>
