--- a/src/components/Offering.astro
+++ b/src/components/Offering.astro
@@ -1,6 +1,7 @@
 ---
 import type { offeringItem } from "@/types/types";
 interface Props extends offeringItem {}
+import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 import Disclaimer from "./shared/Disclaimer.astro";
 import Button from "./shared/Button.astro";
@@ -10,7 +11,7 @@ import Button from "./shared/Button.astro";
 const { image, alt, title, description, price, id, youtubeLink } = Astro.props;
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
-	"/src/assets/quenas/*.{jpeg,jpg,png,gif}"
+	"/src/assets/*.{jpeg,jpg,png,gif}"
 );
 
 if (!images[image])
@@ -24,7 +25,7 @@ if (!images[image])
 		<Image
 			src={image}
 			alt={alt}
-			width={280}
+			width={400}
 			height={400}
 			class="Offering-image"
 		/>
@@ -47,7 +48,7 @@ if (!images[image])
 		<div class="Offering-buttons">
 			<Button
 				link={youtubeLink}
-				buttonText="Ver en YouTube"
+				buttonText="Mírala en YouTube"
 				classes="Button Button-primary Button-sm"
 			/>
 			<Button
@@ -62,14 +63,14 @@ if (!images[image])
 <style lang="scss">
 	.Offering {
 		display: flex;
+		flex-flow: column nowrap;
 		background-color: var(--uiGrayDark);
 		height: fit-content;
 		color: whitesmoke;
 		gap: 0.5em;
-		border-radius: 1em;
+		border-radius: 0.5em;
 		overflow: hidden;
 		flex-grow: 1;
-		flex-flow: column nowrap;
 		justify-content: center;
 		text-align: left;
 		line-height: 1.2;
@@ -79,11 +80,10 @@ if (!images[image])
 		}
 
 		&-image {
+			aspect-ratio: 1/1;
 			object-fit: cover;
-			display: block;
-			width: 100%;
-			height: 320px;
 			transition: all ease 0.3s;
+			display: block;
 
 			&:hover {
 				scale: 1.1;
@@ -95,21 +95,19 @@ if (!images[image])
 			display: flex;
 			flex-flow: column nowrap;
 			gap: 1em;
-			min-height: 370px;
+			font-size: 14px;
 		}
 		&-title {
 			margin: 0;
-			font-size: 1.1rem;
-			font-weight: normal;
+			font-size: 1.2rem;
 			font-weight: bolder;
-			text-transform: uppercase;
 		}
 		&-description {
 			margin: 0;
 			font-size: 1rem;
 		}
 		&-price {
-			font-size: 2rem;
+			font-size: 1.5rem;
 			font-weight: bold;
 			display: flex;
 			align-items: center;
@@ -118,7 +116,7 @@ if (!images[image])
 		}
 		.CLP {
 			font-weight: 400;
-			font-size: 1rem;
+			font-size: 0.8rem;
 		}
 
 		&-buttons {
