--- a/src/components/shared/GoogleAnalytics.astro
+++ b/src/components/shared/GoogleAnalytics.astro
@@ -1,9 +1,10 @@
 <!-- Google tag (gtag.js) -->
 <script
+	is:inline
 	type="text/partytown"
 	async
 	src="https://www.googletagmanager.com/gtag/js?id=G-VQYL10J6V8"></script>
-<script type="text/partytown">
+<script type="text/partytown" is:inline>
 	window.dataLayer = window.dataLayer || [];
 	function gtag() {
 		dataLayer.push(arguments);
