--- a/src/pages/catalog/index.astro
+++ b/src/pages/catalog/index.astro
@@ -7,24 +7,13 @@ import TitlePage from "@/components/TitlePage.astro";
 ---
 
 <Layout
-	title="La Ruta de la Quena, el catálogo Web del luthier Domingo Uribe."
-	description="Este es mi Catálogo de instrumentos musicales y mis servicios de educación">
+	title="Catálogo"
+	description="Este es mi Catálogo de instrumentos musicales. En cada tarjeta podrás ver su precio en peso chileno y en dólar americano, un video demostrativo desde mi Canal de YouTube y contactarme para comprar">
 	<TitlePage
 		title="Catálogo"
-		description="Este es mi Catálogo de instrumentos musicales y mis servicios de educación"
+		description="Este es mi Catálogo de instrumentos musicales. En cada tarjeta podrás ver su precio en peso chileno y en dólar americano, un video demostrativo desde mi Canal de YouTube y contactarme para comprar"
 	/>
 	<OfferingContainer>
 		{offerings.map((item) => <Offering {...item} />)}
 	</OfferingContainer>
 </Layout>
-
-<style>
-	.Catalogo-items {
-		display: grid;
-		gap: 2em;
-		grid-auto-rows: auto;
-		grid-template-columns: repeat(auto-fit, minmax(min(100%, 15em), 1fr));
-		grid-auto-flow: dense;
-		height: auto;
-	}
-</style>
