--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,8 +18,8 @@ import offerings from "../data/dataQuenas";
 
 	<OfferingContainer
 		title="Instrumentos destacados"
-		description="Estos son los instrumentos destacados de este mes">
-		{offerings.slice(0, 3).map((item) => <Offering {...item} />)}
+		description="Estos son mis instrumentos destacados.">
+		{offerings.slice(0, 4).map((item) => <Offering {...item} />)}
 	</OfferingContainer>
 
 	<Button
@@ -29,14 +29,3 @@ import offerings from "../data/dataQuenas";
 		target="_self"
 	/>
 </Layout>
-
-<style lang="scss">
-	.Catalogo-items {
-		display: grid;
-		gap: 2em;
-		grid-auto-rows: auto;
-		grid-template-columns: repeat(auto-fit, minmax(min(100%, 15em), 1fr));
-		grid-auto-flow: dense;
-		height: auto;
-	}
-</style>
