Testing image ussue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import offerings from "../data/dataQuenas";
 
 <Layout
 	title="La Ruta de la Quena, el catálogo Web del luthier Domingo Uribe."
-	description="Domingo Uribe. Soy Luthier y educador, especializado en la fabricación de la quena de alto nivel. Realizo investigación para el diseño y desarrollo permanente de la quena.">
+	description="Domingo Uribe. Soy Luthier y educador, especializado en la fabricación de la quena de alto nivel. Realizo investigación para el diseño y desarrollo permanente de la quena y vendo directamente mis instrumentos através de este medio y mis redes sociales.">
 	<Hero
 		preTitle="Bienvenidos a"
 		title="La Ruta de La Quena"
