--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -62,6 +62,7 @@ const { preTitle, title, body } = Astro.props;
 			color: whitesmoke;
 			flex: 3;
 			order: 1;
+			padding-bottom: 1em;
 
 			.Buttons {
 				display: flex;
