--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -1,10 +1,20 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import offerings from "../data/dataQuenas";
+import OfferingTest from "@/components/OfferingTest.astro";
 ---
 
 <Layout
 	title="La Ruta de la Quena, el catálogo Web del luthier Domingo Uribe."
 	description="Domingo Uribe. Soy Luthier y educador, especializado en la fabricación de la quena de alto nivel. Realizo investigación para el diseño y desarrollo permanente de la quena y vendo directamente mis instrumentos através de este medio y mis redes sociales.">
 	<h1>Hola desde Test</h1>
+
+	<OfferingTest
+		imagePath="/src/assets/ebano1.jpg"
+		altText="alt"
+		name="Nombre del producto"
+		price={200}
+	/>
+
+    
 </Layout>
