Another test to fix images

--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -4,9 +4,7 @@ import offerings from "../data/dataQuenas";
 import OfferingTest from "@/components/OfferingTest.astro";
 ---
 
-<Layout
-	title="La Ruta de la Quena, el catálogo Web del luthier Domingo Uribe."
-	description="Domingo Uribe. Soy Luthier y educador, especializado en la fabricación de la quena de alto nivel. Realizo investigación para el diseño y desarrollo permanente de la quena y vendo directamente mis instrumentos através de este medio y mis redes sociales.">
+<Layout title="Titulito" description="Fotito">
 	<h1>Hola desde Test</h1>
 
 	<OfferingTest
@@ -15,6 +13,4 @@ import OfferingTest from "@/components/OfferingTest.astro";
 		name="Nombre del producto"
 		price={200}
 	/>
-
-    
 </Layout>
