--- a/src/components/OfferingTest.astro
+++ b/src/components/OfferingTest.astro
@@ -1,7 +1,7 @@
 ---
-import type { offeringItem } from "@/types/types";
-import { ImageMetadata } from "astro";
+import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
+
 interface Props {
 	imagePath: string;
 	altText: string;
@@ -10,14 +10,9 @@ interface Props {
 }
 
 const { imagePath, altText, name, price } = Astro.props;
-
 const images = import.meta.glob<{ default: ImageMetadata }>(
-	"/src/assets/*.{jpg, jpeg, png, gif}"
+	"/src/assets/*.{jpeg,jpg,png,gif}"
 );
-if (!images[imagePath])
-	throw new Error(
-		`"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`
-	);
 ---
 
 <div class="ImageCard">
