--- a/src/components/OfferingTest.astro
+++ b/src/components/OfferingTest.astro
@@ -13,6 +13,11 @@ const { imagePath, altText, name, price } = Astro.props;
 const images = import.meta.glob<{ default: ImageMetadata }>(
 	"/src/assets/*.{jpeg,jpg,png,gif}"
 );
+
+if (!images[imagePath])
+	throw new Error(
+		`"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`
+	);
 ---
 
 <div class="ImageCard">
