--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import HeroBackgroundImg from "../assets/images/logoQuenaBambu.jpg";
+import HeroBackgroundImg from "../assets/images/hero-image-1.jpg";
 import Button from "./shared/Button.astro";
 import { slide } from "astro:transitions";
 
@@ -23,13 +23,13 @@ const { preTitle, title, body } = Astro.props;
 				<Button
 					classes="Button Button-md Button-primary"
 					link="https://www.youtube.com/@domingouribe"
-					buttonText="Conoce mi trabajo en YouTube"
+					buttonText="Mi trabajo en YouTube"
 					target="_blank"
 				/>
 				<Button
 					classes="Button Button-md"
 					link="/catalog"
-					buttonText="Mira mi Catálogo"
+					buttonText="Catálogo"
 					target="_self"
 				/>
 			</div>
@@ -37,7 +37,7 @@ const { preTitle, title, body } = Astro.props;
 		<Image
 			src={HeroBackgroundImg}
 			alt="Imagen de fondo con dos quenas"
-			width={400}
+			width={800}
 			class="Hero-image"
 		/>
 	</div>
@@ -60,7 +60,7 @@ const { preTitle, title, body } = Astro.props;
 			flex-flow: column;
 			gap: 1em;
 			color: whitesmoke;
-			flex: 3;
+			flex: 1;
 			order: 1;
 			padding-bottom: 1em;
 
