Hero image aspect ratio fixed

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -37,8 +37,8 @@ const { preTitle, title, body } = Astro.props;
 		<Image
 			src={HeroBackgroundImg}
 			alt="Imagen de fondo con dos quenas"
-			width={889}
-			height={500}
+			width={990}
+			height={370}
 			class="Hero-image"
 		/>
 	</div>
@@ -61,7 +61,7 @@ const { preTitle, title, body } = Astro.props;
 			flex-flow: column;
 			gap: 1em;
 			color: whitesmoke;
-			flex: 1;
+			// flex: 1;
 			order: 1;
 			padding-bottom: 1em;
 
@@ -71,14 +71,13 @@ const { preTitle, title, body } = Astro.props;
 			}
 		}
 		&-image {
-			flex: 1;
+			// flex: 1;
 			border-radius: 0.5em;
 			order: 2;
-
 			width: 100%;
 			height: auto;
 			object-fit: cover;
-			aspect-ratio: 19/9;
+			aspect-ratio: 99/37;
 		}
 
 		&-pretitle {
