--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,7 +16,7 @@ const { preTitle, title, body } = Astro.props;
 <div class="Hero" transition:animate={slide({ duration: "0.8s" })}>
 	<div class="Container">
 		<div class="Hero-content">
-			<p class="Hero-pretitle">{preTitle}</p>
+			<span class="Hero-pretitle">{preTitle}</span>
 			<h1 class="Hero-title">{title}</h1>
 			<p class="Hero-body">{body}</p>
 			<div class="Buttons">
