Change background color

--- a/src/components/Offering.astro
+++ b/src/components/Offering.astro
@@ -85,7 +85,8 @@ const formattedTotalUSD = totalUSD.toFixed(0); // No especificar decimales para 
 	.Offering {
 		display: flex;
 		flex-flow: column nowrap;
-		background-color: var(--uiGrayDark);
+		// background-color: var(--uiGrayDark);
+		background-color: var(--uiPurpleLight);
 		height: fit-content;
 		color: whitesmoke;
 		gap: 0.5em;
