--- a/src/components/shared/Button.astro
+++ b/src/components/shared/Button.astro
@@ -54,7 +54,7 @@ const { link, buttonText, classes, target = "_self" } = Astro.props;
 	}
 
 	.Button-lg {
-		padding: 1.1em 2em;
+		padding: 1em;
 		font-size: 1.1rem;
 	}
 
@@ -76,8 +76,8 @@ const { link, buttonText, classes, target = "_self" } = Astro.props;
 			width: 100%;
 		}
 		.Button-md {
-			padding: 0.7em 1em;
-			font-size: 0.7rem;
+			padding: 0.7em 0.3em;
+			font-size: 0.6rem;
 		}
 	}
 </style>
