--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -53,7 +53,7 @@ const { preTitle, title, body } = Astro.props;
 
 		overflow: hidden;
 		padding: 3em 0 0;
-		gap: 2em;
+		gap: 1em;
 		margin-bottom: 2em;
 
 		&-content {
@@ -67,7 +67,7 @@ const { preTitle, title, body } = Astro.props;
 
 			.Buttons {
 				display: flex;
-				gap: 2em;
+				gap: 1em;
 			}
 		}
 		&-image {
@@ -120,26 +120,26 @@ const { preTitle, title, body } = Astro.props;
 		}
 
 		@media screen and (max-width: 440px) {
-			padding-top: 1em;
+			padding: 1em 0 0;
 
 			&-pretitle {
-				font-size: 1.2rem;
+				font-size: 1rem;
 			}
 
 			&-title {
-				font-size: 2rem;
+				font-size: 1.3rem;
 			}
 
 			&-image {
-				margin-top: 1em;
+				margin-top: 0;
 			}
 
 			.Buttons {
-				flex-flow: column nowrap;
+				flex-flow: row nowrap;
+			}
 
-				.Button {
-					flex-grow: 1;
-				}
+			&-content {
+				padding: 1rem 0 0;
 			}
 		}
 	}
