--- a/src/components/shared/PostPreviewCard.astro
+++ b/src/components/shared/PostPreviewCard.astro
@@ -29,7 +29,7 @@ import Button from "../shared/Button.astro";
 <style lang="scss">
 	.Post {
 		padding: 1em;
-		background-color: var(--uiGrayMedium);
+		background-color: var(--uiPurpleLight);
 		gap: 1em;
 		border-radius: 0.5em;
 
