Posts image properties updated

--- a/src/layouts/LayoutBlog.astro
+++ b/src/layouts/LayoutBlog.astro
@@ -17,6 +17,8 @@ import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 		<style is:global lang="scss">
 			.Post-full img {
 				width: 100%;
+				height: auto;
+				aspect-ratio: 19/9;
 
 				h1 {
 					font-size: 3rem;
