--- a/src/components/shared/PostPreviewCard.astro
+++ b/src/components/shared/PostPreviewCard.astro
@@ -11,7 +11,8 @@ import Button from "../shared/Button.astro";
 		<img
 			src={post.frontmatter.image.url}
 			alt={post.frontmatter.image.alt}
-			width={300}
+			width={800}
+			height={600}
 			class="Post-image"
 		/>
 		<p class="Post-description">
