View Transitions stand by and prices updated

--- a/src/components/shared/Brand.astro
+++ b/src/components/shared/Brand.astro
@@ -14,15 +14,16 @@ import { SITE_TITLE } from "../../consts";
 		align-items: center;
 
 		&-tag {
-			font-size: 1.2em;
+			font-size: 1.3em;
 			color: #222;
 			font-weight: bold;
 			text-decoration: none;
 			text-transform: uppercase;
-		}
-
-		&-description {
-			color: #222;
+			letter-spacing: -1px;}
+			
+			&-description {
+				color: #222;
+				font-size: .9em;
 		}
 
 		&-tag a,
