--- a/src/components/shared/Bars.astro
+++ b/src/components/shared/Bars.astro
@@ -1,33 +1,32 @@
----
-
----
-
 <button class="Bars" aria-label="Navigation menu">
 	<span class="Bars-line"></span>
 	<span class="Bars-line"></span>
 	<span class="Bars-line"></span>
 </button>
-
 <style lang="scss">
 	.Bars {
-		display: inline-flex;
+		display: none;
 		width: 40px;
 		border: none;
 		background: none;
 		flex-flow: column;
 		cursor: pointer;
-		overflow: hidden;
 		z-index: 2;
+
+		@media screen and (max-width: 768px) {
+			display: block;
+		}
 
 		&-line {
 			height: 3px;
 			width: 100%;
-			background-color: #000;
+			background-color: rgb(0, 0, 0);
 			display: block;
 			margin-top: 5px;
 			transition: all 0.2s ease;
 		}
 	}
+
 	.TransformBars {
 		span:nth-child(1) {
 			transform: translateY(8px) rotate(45deg);
