--- a/src/components/shared/Header.astro
+++ b/src/components/shared/Header.astro
@@ -1,14 +1,13 @@
 ---
 import Bars from "./Bars.astro";
 import Brand from "./Brand.astro";
-import Navigation from "./Navigation.astro";
+import NavBar from "./NavBar.astro";
+import Navigation from "./NavBar.astro";
 ---
 
 <header class="Header">
-	<Navigation />
 	<div class="Container">
-		<Brand tag="Domingo Uribe" ocupation="Desarrollador Web" />
-		<Bars />
+		<NavBar />
 	</div>
 </header>
 
