View transitions declarations deleted

--- a/src/layouts/LayoutBlog.astro
+++ b/src/layouts/LayoutBlog.astro
@@ -5,12 +5,11 @@ import Header from "@/components/shared/Header.astro";
 import Footer from "@/components/shared/Footer.astro";
 import "@fontsource-variable/urbanist";
 const { title, description, frontmatter } = Astro.props;
-import { fade } from "astro:transitions";
 import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 ---
 
 <!doctype html>
-<html lang="es-CL" transition:animate={fade({ duration: "0.3s" })}>
+<html lang="es-CL">
 	<head>
 		<GoogleAnalytics />
 		<BaseHead title={frontmatter?.title ?? title} description={description} />
