--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,12 +11,11 @@ interface Props {
 }
 
 const { title, description } = Astro.props;
-import { fade } from "astro:transitions";
 import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 ---
 
 <!doctype html>
-<html lang="es-CL" transition:animate={fade({ duration: "0.3s" })}>
+<html lang="es-CL">
 	<head>
 		<GoogleAnalytics />
 		<BaseHead title={title} description={description} />
