Disclaimer icon and unnused  files fixed

--- a/src/components/shared/Disclaimer.astro
+++ b/src/components/shared/Disclaimer.astro
@@ -58,6 +58,7 @@
 		.Disclaimer-icon {
 			cursor: pointer;
 			color: var(--uiYellow);
+			display: block;
 		}
 
 		.Disclaimer-icon:hover + .Disclaimer-text,
