Actualizar view transitions BaseHead.astro

--- a/src/components/shared/BaseHead.astro
+++ b/src/components/shared/BaseHead.astro
@@ -6,6 +6,12 @@ interface Props {
 	canonicalURL?: string;
 }
 
+<style>
+@view-transitions {
+navigation: auto;
+}
+</style>
+
 const { title, description, canonicalURL = "", image } = Astro.props;
 ---
 
