--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,6 +16,11 @@
     --uiBrown: rgb(128, 70, 23);
     --uiPurple: rgba(24, 1, 27, 0.068);
     --uiPurpleLight: rgba(233, 199, 238, 0.089);
+    --radio-sm: 4px;
+    --radio-md: 8px;
+    --radio-l: 12px;
+    --radio-xl: 16px;
+    --radio-xxl: 24px;
 
 }
 
