--- a/src/components/Offering.astro
+++ b/src/components/Offering.astro
@@ -37,8 +37,8 @@ const { formattedPriceCLP, formattedTotalUSD } = getFormattedPrices(priceCLP);
 		<h1 class="Offering-title">{title}</h1>
 		<p class="Offering-description">{description}</p>
 
+		<span class="PriceTag">Precio</span>
 		<div class="Offering-Pricebox">
-			PRECIO:
 			<div class="Offering-price">
 				<span class="CLP">CLP $</span>
 				{formattedPriceCLP}
@@ -112,7 +112,7 @@ const { formattedPriceCLP, formattedTotalUSD } = getFormattedPrices(priceCLP);
 		}
 		&-title {
 			margin: 0;
-			font-size: 1.2rem;
+			font-size: 1.5rem;
 			font-weight: bolder;
 		}
 		&-description {
@@ -125,9 +125,12 @@ const { formattedPriceCLP, formattedTotalUSD } = getFormattedPrices(priceCLP);
 			border-radius: var(--radio-md);
 			font-size: 20px;
 		}
-
+		.PriceTag {
+			font-size: 1.1rem;
+			font-weight: 500;
+		}
 		&-price {
-			padding: .3em;
+			padding: 0.5em 0;
 		}
 		&-price:nth-child(1) {
 			font-size: 2.5rem;
