--- a/src/components/Offering.astro
+++ b/src/components/Offering.astro
@@ -77,7 +77,7 @@ const { formattedPriceCLP, formattedTotalUSD } = getFormattedPrices(priceCLP);
 		background-color: var(--uiPurpleLight);
 		height: fit-content;
 		color: whitesmoke;
-		gap: 0.5em;
+		gap: 0.4em;
 		border-radius: 0.5em;
 		overflow: hidden;
 		flex-grow: 1;
@@ -104,24 +104,22 @@ const { formattedPriceCLP, formattedTotalUSD } = getFormattedPrices(priceCLP);
 			}
 		}
 		&-text {
-			padding: 1em;
+			padding: 0.3em;
 			display: flex;
 			flex-flow: column nowrap;
 			gap: 1em;
-			font-size: 14px;
 		}
 		&-title {
 			margin: 0;
-			font-size: 1.5rem;
+			font-size: 1.1rem;
 			font-weight: bolder;
 		}
 		&-description {
 			margin: 0;
-			font-size: 1rem;
 		}
 		&-Pricebox {
 			background-color: rgba(255, 255, 255, 0.137);
-			padding: 0.5em;
+			padding: 0 0.5em;
 			border-radius: var(--radio-md);
 			font-size: 20px;
 		}
@@ -130,7 +128,7 @@ const { formattedPriceCLP, formattedTotalUSD } = getFormattedPrices(priceCLP);
 			font-weight: 500;
 		}
 		&-price {
-			padding: 0.5em 0;
+			padding: 0.3em 0;
 		}
 		&-price:nth-child(1) {
 			font-size: 2.5rem;
