--- a/src/pages/catalog/index.astro
+++ b/src/pages/catalog/index.astro
@@ -8,7 +8,8 @@ import TitlePage from "@/components/TitlePage.astro";
 
 <Layout
 	title="Catálogo"
-	description="Este es mi Catálogo de instrumentos musicales. En cada tarjeta podrás ver su precio en peso chileno y en dólar americano, un video demostrativo desde mi Canal de YouTube y contactarme para comprar">
+	description="Este es mi Catálogo de quenas e instrumentos musicales. En cada tarjeta podrás ver su precio en peso chileno y en dólar americano, un video demostrativo desde mi Canal de YouTube y contactarme para comprar"
+	image="/MainSiteImage.jpg">
 	<TitlePage
 		title="Catálogo"
 		description="Este es mi Catálogo de instrumentos musicales. En cada tarjeta podrás ver su precio en peso chileno y en dólar americano, un video demostrativo desde mi Canal de YouTube y contactarme para comprar"
