Canonical URL error fixed

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import HeroBackgroundImg from "../assets/images/hero-image-1.jpg";
 import Button from "./shared/Button.astro";
-import { fade, slide } from "astro:transitions";
+import { slide } from "astro:transitions";
 
 interface Props {
 	title: string;
