--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,7 +4,7 @@ import WhatsAppLg from "@/components/social-icons/WhatsAppLg.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout
+<Layout image="/public/MainSiteImage.jpg"
 	title="Contáctame"
 	description="Mis datos de contacto oficiales y siempre actualizados">
 	<TitlePage
