--- a/src/pages/education.astro
+++ b/src/pages/education.astro
@@ -5,7 +5,7 @@ import Button from "@/components/shared/Button.astro";
 import SectionPage from "@/components/SectionPage.astro";
 ---
 
-<Layout
+<Layout image="/public/MainSiteImage.jpg"
 	title="Educación - Mis Cursos y Masterclass"
 	description="Conoce mis Cursos de luthería y Masterclass técnicas">
 	<SectionPage id="education" title="Cursos y talleres">
