--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ import "@fontsource-variable/urbanist";
 interface Props {
 	title: string;
 	description: string;
-	image: string;
+	image?: string;
 }
 
 const { title, description, image } = Astro.props;
